--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,11 @@ on:
     push:
         tags:
             - "**"
+        paths-ignore:
+            - ".github/**"
+            - "README.md"
+            - "build/**"
+            - "assets/**"
 
 jobs:
     release:
@@ -11,7 +16,7 @@ jobs:
         
         env:
             #WOWI_API_TOKEN: ${{ secrets.WOWI_API_TOKEN }}
-            #WAGO_API_TOKEN: ${{ secrets.WAGO_API_TOKEN }}
+            WAGO_API_TOKEN: ${{ secrets.WAGO_API_TOKEN }}
             CF_API_KEY: ${{ secrets.CF_API_KEY }}
             GITHUB_OAUTH: ${{ secrets.GITHUB_TOKEN }}
     
